Remove more Java 8 code